# dbt-playground

./: .editorconfig  README.md
.github/: renovate.json5
.github/workflows/: terraform-stacks.yaml
dbt/: .gitignore  Makefile  dbt_project.yml  pyproject.toml
stacks/terraform/: .gitignore  Makefile  ci.mk  local.mk
stacks/terraform/modules/snowflake/database/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
stacks/terraform/modules/snowflake/database/tests/: main.tftest.hcl
stacks/terraform/modules/snowflake/functional-role/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
stacks/terraform/modules/snowflake/functional-role/tests/: main.tftest.hcl
stacks/terraform/modules/snowflake/service-user/: main.tf  variables.tf
stacks/terraform/modules/snowflake/service-user/tests/: main.tftest.hcl
stacks/terraform/modules/snowflake/testing/vault-setup/: main.tf  outputs.tf
stacks/terraform/modules/snowflake/warehouse/: main.tf  outputs.tf  variables.tf  versions.tf
stacks/terraform/modules/snowflake/warehouse/tests/: main.tftest.hcl
stacks/terraform/scripts/: test-modules.sh
stacks/terraform/snowflake/: .terraform.lock.hcl  backend.tf  database.tf  functional_role.tf  locals.tf  provider.tf  providers.tf  role.tf  service_user.tf  user.tf  variables.tf  versions.tf  warehouse.tf
