[project]
name = "dbt-playground"
version = "0.1.0"
description = "The playground for dbt."
authors = [
    { name = "scizorman", email = "tueda1207@gmail.com" },
]
dependencies = [
    "dbt-snowflake==1.7.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "shandy-sqlfmt[jinjafmt]==0.21.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.sqlfmt]
line_length = 120
exclude = [
    "target/**/*",
    "dbt_packages/**/*",
    ".venv/**/*",
]
