[project]
name = "dbt-playground"
version = "0.1.0"
description = "The playground for dbt."
authors = [
    { name = "scizorman", email = "tueda1207@gmail.com" },
]
dependencies = [
    "dbt-snowflake==1.7.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "shandy-sqlfmt[jinjafmt]==0.21.0",
    "yamlfix==1.16.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.sqlfmt]
exclude = [
    ".venv/**/*",
    "dbt_packages/**/*",
    "target/**/*",
]
verbose = true

[tool.yamlfix]
explicit_start = false
section_whitelines = 1
sequence_style = "block_style"
quote_basic_values = true
